<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:mContext="com.example.ofek.prolog.activities.HomeScreenActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_reset_exercise_list"
        android:orderInCategory="200"
        android:title="@string/reset_exercise_list_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset"
        android:orderInCategory="300"
        android:title="@string/action_reset"
        app:showAsAction="never" />

</menu>
