<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:mContext=".fragments.NewExerciseDialogFragment">

    <Button
        android:id="@+id/button_exercise_confirm"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_exercise_cancel"
        app:layout_constraintTop_toTopOf="@+id/button_exercise_cancel" />

    <Button
        android:id="@+id/button_exercise_cancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@android:string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/button_exercise_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_exercise_units" />

    <Spinner
        android:id="@+id/sp_exercise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_exercise_name"
        app:layout_constraintEnd_toStartOf="@+id/ibutton_exercise_delete"
        app:layout_constraintStart_toEndOf="@+id/text_exercise_name"
        app:layout_constraintTop_toTopOf="@+id/text_exercise_name" />

    <TextView
        android:id="@+id/text_exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="0"
        android:text="@string/exercise_choose_exercise"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_workout_date"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibutton_exercise_delete">

        <EditText
            android:id="@+id/edit_exercise_weight"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:background="@drawable/textinputborder"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:typeface="normal" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/text_exercise_units"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/textinputborder"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/text_workout_date"
        app:layout_constraintStart_toStartOf="@+id/text_workout_date"
        app:layout_constraintTop_toBottomOf="@+id/text_workout_date" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_exercise_repetitions"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_workout_date"
        app:layout_constraintTop_toTopOf="@+id/text_workout_date">

        <EditText
            android:id="@+id/edit_exercise_repetitions"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@drawable/textinputborder"
            android:gravity="center"
            android:inputType="numberSigned"
            android:typeface="normal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_exercise_sets"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_workout_date"
        app:layout_constraintTop_toTopOf="@+id/text_workout_date">

        <EditText
            android:id="@+id/edit_exercise_sets"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@drawable/textinputborder"
            android:gravity="center"
            android:inputType="numberSigned"
            android:typeface="normal" />
    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/ibutton_exercise_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_delete"
        android:contentDescription="@string/exercise_delete_desc"
        app:layout_constraintBottom_toBottomOf="@+id/sp_exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sp_exercise" />

</android.support.constraint.ConstraintLayout>